# Citibank-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  health.py  market.py
app/core/: __init__.py  config.py  deps.py  scheduler.py
app/models/: market.py
app/schemas/: __init__.py  market.py
app/services/market/: __init__.py  driver_service.py  event_service.py  market_service.py  regime_service.py
app/tasks/: driver_sync.py  event_sync.py  market_data_sync.py  regime_sync.py
docker/mysql/init/: 01-init.sql
docs/: README_DOCKER.md  README_ENV.md  market_drivers.md  market_events.md  market_regime.md  market_snapshot.md
scripts/: zkp_login.py
